# lozenge-tilings

./: .babelrc  .eslintrc.js  .gitignore  .stylelintrc.js  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.ts
.github/workflows/: deployPage.yml  node.js.yml
lib/: Cargo.toml
lib/src/: box_map.rs  lib.rs  main.rs  time.rs  vector2.rs  vector3.rs  vector3_set.rs
src/: App.tsx  appState.ts  index.html  index.tsx  lozengeTilingComlink.ts
src/components/AddBoxButton/: index.tsx
src/components/ConfigNumberInputWithLabel/: index.tsx
src/components/ConfigurationForm/: index.tsx
src/components/DrawDistanceInputs/: index.tsx
src/components/GenerateButton/: index.tsx
src/components/IterationsInput/: index.tsx
src/components/MainScene/: index.tsx
src/components/MainScene/BoxCounters/: index.tsx
src/components/MainScene/Boxes/: index.tsx
src/components/MainScene/Counters/: index.tsx
src/components/MainScene/VoxelInstances/: index.tsx
src/components/MainScene/Walls/: index.tsx
src/components/MarkovChainCheckbox/: index.tsx
src/components/MarkovChainQInput/: index.tsx
src/components/PeriodInputs/: index.tsx
src/components/ProcessingWithProgress/: index.tsx
src/components/RemoveBoxButton/: index.tsx
src/components/ResetButton/: index.tsx
src/components/RunStopButton/: index.tsx
src/components/StyleProvider/: index.tsx
src/core/: generate.ts  lozengeTiling.ts  lozengeTiling.worker.ts
src/hooks/: useProcessingProgress.ts
src/redux/: store.ts
src/util/: benchmark.ts
(+3 files in other folders)
