[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.61"
features = [ "console" ]
