[package]
name = "lozenge_tilings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.61"
rustc-hash = "1.1.0"
web-sys = { version = "0.3.61", features = ["console"]}
